[package]
  edition = "2021"
  name = "cove"
  version = "0.1.0"

  # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
  axum = "0.6.11"
  config = "0.13.3"
  ethers = "2.0.0"
  futures = "0.3.27"
  git2 = "0.16.1"
  heimdall = { git = "https://github.com/Jon-Becker/heimdall-rs.git", version = "0.4.0" }
  hyper = "0.14.25"
  serde = { version = "1.0.155", features = ["derive"] }
  tempfile = "3.4.0"
  tokio = { version = "1.26.0", features = ["full"] }
  tower = "0.4.13"
  tower-http = { version = "0.4.0", features = ["trace", "request-id", "util"] }
  tracing = "0.1.37"
  tracing-bunyan-formatter = "0.3.6"
  tracing-log = "0.1.3"
  tracing-subscriber = { version = "0.3.16", features = [
    "registry",
    "env-filter",
  ] }

[dev-dependencies]
  once_cell = "1.17.1"
  reqwest = "0.11.14"
  serde_json = "1.0.94"
