[package]
  edition = "2021"
  name = "cove"
  version = "0.1.0"

[dependencies]
  axum = "0.6.11"
  config = "0.13.3"
  dotenvy = "0.15.6"
  ethers = "2.0.4"
  futures = "0.3.27"
  headers = "0.3.8"
  heimdall = { git = "https://github.com/Jon-Becker/heimdall-rs.git", version = "0.4.5" }
  hyper = "0.14.25"
  serde = { version = "1.0.155", features = ["derive"] }
  serde_json = "1.0.94"
  tempfile = "3.4.0"
  tokio = { version = "1.26.0", features = ["full"] }
  toml = "0.7.3"
  tower = "0.4.13"
  tower-http = { version = "0.4.0", features = [
    "trace",
    "request-id",
    "util",
    "cors",
  ] }
  tracing = { version = "0.1.37", features = ["log"] }
  tracing-bunyan-formatter = "0.3.6"
  tracing-log = "0.1.3"
  tracing-subscriber = { version = "0.3.16", features = [
    "registry",
    "env-filter",
  ] }
  uuid = { version = "1.3.3", features = ["v4", "serde"] }
  walkdir = "2.3.3"

[dev-dependencies]
  once_cell = "1.17.1"
  reqwest = "0.11.14"
